2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/memory.h (grub_machine_mmap_iterate):
	Remove redundant declaration.
	(grub_mmap_get_post64): Likewise.
	(grub_mmap_get_upper): Likewise.
	(grub_mmap_get_lower): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/dvh.c (grub_dvh_is_valid): Make argument
	uint32_t * to ensure alignment.
	(dvh_partition_map_iterate): Make `block' a union to ensure alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/sunpc.c (grub_sun_is_valid): Make argument
	uint16_t * to ensure alignment.
	(sun_pc_partition_map_iterate): Make `block' a union to ensure
	alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/sun.c (grub_sun_is_valid): Make argument uint16_t *
	to ensure alignment.
	(sun_partition_map_iterate): Make `block' a union to ensure alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (u16at): Make into inline function.
	Handle unaligned pointers.
	(u32at): Likewise.
	(u64at): Likewise.
	(fixup): Use byte access instead of v16at.
	(find_attr): Fix imporper usage of v32at.
	(read_data): Likewise.
	(list_file): Handle byte-swapping and unaligned strings.
	(grub_ntfs_label): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/udf.c (grub_udf_partmap): Add packed attribute
	as it's not necessarily aligned.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/qemu_mips/init.c (grub_at_keyboard_init): Remove
	redundant declaration.
	(grub_serial_init): Likewise.
	(grub_terminfo_init): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (DVA_OFFSET_TO_PHYS_SECTOR): Make into inline
	function.
	(ZAP_HASH_IDX): Likewise.
	(ZAP_LEAF_HASH_SHIFT): Likewise.
	(ZAP_LEAF_HASH_NUMENTRIES): Likewise.
	(LEAF_HASH): Likewise.
	(ZAP_LEAF_NUMCHUNKS): Likewise.