@@ -1,5 +1,14 @@
 2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/emu/misc.h (xasprintf): Add missing format attribute.
+	* include/grub/mips/kernel.h (grub_halt): Remove redundant declaration.
+	* include/grub/mips/qemu_mips/kernel.h (grub_halt): Likewise.
+	* include/grub/misc.h (grub_reboot)
+	[GRUB_MACHINE_EMU || GRUB_MACHINE_QEMU_MIPS]: Export.
+	(grub_halt) [__mips__]: Likewise.
+
+2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/efi/memory.h (grub_machine_mmap_iterate):
 	Remove redundant declaration.
 	(grub_mmap_get_post64): Likewise.
